tests/baselines/reference/wrappedAndRecursiveConstraints4.errors.txt
tests/cases/conformance/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints4.ts(12,15): error TS2345: Argument of type '""' is not assignable to parameter of type '{ length: 2; }'.


==== tests/cases/conformance/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints4.ts (1 errors) ====
    class C<T extends { length: number }> {
        constructor(x: T) { }
        foo<U extends T>(x: U) {
            function bar<V extends U>(x: V) {
                return x;
            }
            return bar;
        }
    }
    
    var c = new C({ length: 2 });
    var r = c.foo('');
                  ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type '{ length: 2; }'.
    var r2 = r({ length: 3, charAt: (x: number) => { '' } }); // error